--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ ext {
             "hilt": 'com.google.dagger:hilt-android:2.42',
             "hilt_compiler": 'com.google.dagger:hilt-compiler:2.42',
             "multidex": 'androidx.multidex:multidex:2.0.1',
-            "design_chili": 'com.github.ealmaz:DesignChili:0.0.0.47',
             "splashscreen": 'androidx.core:core-splashscreen:1.0.0-rc01',
             "coroutines": 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0',
             "retrofit": 'com.squareup.retrofit2:retrofit:2.9.0',
@@ -45,7 +44,10 @@ ext {
             "play_core": "com.google.android.play:core:1.10.3",
             "biometric": "androidx.biometric:biometric:1.2.0-alpha04",
             "osm_map": 'org.osmdroid:osmdroid-android:6.1.13',
-            "glide": 'com.github.bumptech.glide:glide:4.11.0'
+            "glide": 'com.github.bumptech.glide:glide:4.11.0',
+            "rx_java2": 'io.reactivex.rxjava2:rxjava:2.2.2',
+            "rx_android": 'io.reactivex.rxjava2:rxandroid:2.1.0',
+            "rx_adapter": 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     ]
 }
 
